[package]
name = "BangleJS_connect"
version = "0.1.0"
edition = "2021"

[dependencies]
dbus = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
btleplug = { version = "0.10", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3.30"
# uuid = "1.9.1"
# log = "0.4"
# pretty_env_logger = "0.4"
